Fixed some layout issues

--- a/iPark/Base.lproj/Main.storyboard
+++ b/iPark/Base.lproj/Main.storyboard
@@ -3206,14 +3206,14 @@ NOTE: IF YOU INTEND ON ENTERING WITH AN SUV OR OVERSIZED VEHICLE YOU MUST CONTAC
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9bU-mg-CIa" userLabel="Split View">
-                                <rect key="frame" x="0.0" y="44" width="414" height="0.5"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="0.0"/>
                                 <color key="backgroundColor" red="0.58823529409999997" green="0.62352941179999999" blue="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="0.5" id="OYW-Sc-dTq"/>
+                                    <constraint firstAttribute="height" constant="0.10000000000000001" id="OYW-Sc-dTq"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GfT-P7-CqC" userLabel="Top View">
-                                <rect key="frame" x="0.0" y="44.5" width="414" height="46"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="46"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wIq-9y-ocs">
                                         <rect key="frame" x="0.0" y="0.0" width="290" height="46"/>
@@ -3271,7 +3271,7 @@ NOTE: IF YOU INTEND ON ENTERING WITH AN SUV OR OVERSIZED VEHICLE YOU MUST CONTAC
                                 </constraints>
                             </view>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HDm-mZ-uIe">
-                                <rect key="frame" x="0.0" y="90.5" width="414" height="771.5"/>
+                                <rect key="frame" x="0.0" y="90" width="414" height="772"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Af1-Nv-t6d">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="670"/>
@@ -4315,13 +4315,14 @@ NOTE: IF YOU INTEND ON ENTERING WITH AN SUV OR OVERSIZED VEHICLE YOU MUST CONTAC
                                     <constraint firstItem="7vD-JL-HF5" firstAttribute="top" secondItem="3rE-g8-brh" secondAttribute="top" id="sgh-cJ-eSE"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dNv-L2-a97">
-                                <rect key="frame" x="189" y="592" width="36" height="36"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dNv-L2-a97">
+                                <rect key="frame" x="189" y="593" width="36" height="36"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="36" id="P1F-eK-c5P"/>
                                     <constraint firstAttribute="width" constant="36" id="VZg-YK-O7T"/>
                                 </constraints>
+                                <color key="tintColor" red="0.20392156859999999" green="0.2470588235" blue="0.29411764709999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" image="icon-arrow-down"/>
                                 <connections>
                                     <action selector="onClickArrow:" destination="z24-As-qFl" eventType="touchUpInside" id="14h-15-UsT"/>
@@ -4361,7 +4362,7 @@ NOTE: IF YOU INTEND ON ENTERING WITH AN SUV OR OVERSIZED VEHICLE YOU MUST CONTAC
                                         </connections>
                                     </collectionView>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="185" id="0xe-5M-tLW"/>
                                     <constraint firstItem="XEn-7E-jpD" firstAttribute="top" secondItem="GPj-dC-paL" secondAttribute="bottom" constant="12" id="CTv-mp-6vM"/>
@@ -4666,7 +4667,7 @@ New York, NY 10024, USA</string>
                         <constraints>
                             <constraint firstItem="73c-MZ-YW0" firstAttribute="leading" secondItem="s07-zT-zMJ" secondAttribute="leading" id="8vD-M4-LUI"/>
                             <constraint firstItem="dNv-L2-a97" firstAttribute="centerX" secondItem="3Vi-lu-ITK" secondAttribute="centerX" id="EGE-Gr-LMB"/>
-                            <constraint firstItem="dNv-L2-a97" firstAttribute="bottom" secondItem="3ga-EK-uHZ" secondAttribute="top" id="GXP-o7-Sl3"/>
+                            <constraint firstItem="dNv-L2-a97" firstAttribute="bottom" secondItem="3ga-EK-uHZ" secondAttribute="top" constant="1" id="GXP-o7-Sl3"/>
                             <constraint firstItem="s07-zT-zMJ" firstAttribute="trailing" secondItem="BGn-lJ-BV8" secondAttribute="trailing" id="Grg-yx-Pfu"/>
                             <constraint firstItem="3rE-g8-brh" firstAttribute="leading" secondItem="s07-zT-zMJ" secondAttribute="leading" id="Jq3-oJ-M1m"/>
                             <constraint firstItem="s07-zT-zMJ" firstAttribute="trailing" secondItem="73c-MZ-YW0" secondAttribute="trailing" id="SbB-oQ-XOa"/>
